--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -248,24 +248,27 @@
         </button>
       </div>
     </div>
-    <br>
+    <br><br>
     <div class="ui form">
       <div class="inline fields">
         <div class="five wide field">
           <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
           <select id="select1" class="ui dropdown">
-            <option value="0">Equal</option>
-            <option value="1">Not Equal</option>
+            <option value="0">Between</option>
+            <option value="1">Less Than</option>
+            <option value="1">More Than</option>
           </select>
         </div>
         <div class="three wide field">
-          <input type="text" value="5,000,000">
+          <input type="text" value="0">
         </div>
-        <div class="four wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+        <div class="one wide field">
+          <label>ถึง</label>
+        </div>
+        <div class="two wide field">
           <input type="text" value="1">
         </div>
-        <div class="four wide field">
+        <div class="five wide field">
           <label class="custom-label-w-25">กำหนดค่าเป็น</label>
           <input type="text" value="ต่ำ">
         </div>
@@ -275,18 +278,21 @@
         <div class="five wide field">
           <label class="custom-label-w-10">เงื่อนไขที่ 2</label>
           <select id="select2" class="ui dropdown">
-            <option value="0">Equal</option>
-            <option value="1">Not Equal</option>
+            <option value="0">Between</option>
+            <option value="1">Less Than</option>
+            <option value="1">More Than</option>
           </select>
         </div>
         <div class="three wide field">
-          <input type="text" value="5,000,001">
+          <input type="text" value="1.1">
         </div>
-        <div class="four wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+        <div class="one wide field">
+          <label>ถึง</label>
+        </div>
+        <div class="two wide field">
           <input type="text" value="2">
         </div>
-        <div class="four wide field">
+        <div class="five wide field">
           <label class="custom-label-w-25">กำหนดค่าเป็น</label>
           <input type="text" value="กลาง">
         </div>
@@ -296,18 +302,21 @@
         <div class="five wide field">
           <label class="custom-label-w-10">เงื่อนไขที่ 3</label>
           <select id="select3" class="ui dropdown">
-            <option value="0">Equal</option>
-            <option value="1">Not Equal</option>
+            <option value="0">Between</option>
+            <option value="1">Less Than</option>
+            <option value="1">More Than</option>
           </select>
         </div>
         <div class="three wide field">
-          <input type="text" value="50,000,000">
+          <input type="text" value="2.1">
         </div>
-        <div class="four wide field">
-          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+        <div class="one wide field">
+          <label>ถึง</label>
+        </div>
+        <div class="two wide field">
           <input type="text" value="3">
         </div>
-        <div class="four wide field">
+        <div class="five wide field">
           <label class="custom-label-w-25">กำหนดค่าเป็น</label>
           <input type="text" value="สูง">
         </div>
@@ -315,7 +324,7 @@
 
     </div>
   </div>
-
+  
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
