--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
@@ -1,3 +1,370 @@
-<p>
-  int08-3-3-3 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ประเมินความเสี่ยงโครงการรวม</h2>
+
+    <div class="ui top attached header">
+      <span>ประเมินความเสี่ยงโครงการรวม</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui right aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button">
+            <i class="print icon"></i>
+            พิมพ์
+          </button>
+        </div>
+      </div>
+
+      <table class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2">ลำดับ</th>
+            <th rowspan="2">หน่วยงาน</th>
+            <th colspan="2">
+              <a href="javascript:;" (click)="popupWeightData()">
+                1. ค่าเปรียบเทียบปรับ
+              </a>
+            </th>
+            <th colspan="2">
+              <a href="javascript:;" (click)="popupWeightData()">
+                2. จำนวนผลคดี
+              </a>
+            </th>
+            <th colspan="1">ค่าความเสี่ยงเฉลี่ย</th>
+            <th rowspan="2">
+              <a href="javascript:;" (click)="popupEditData()">
+                แปลค่า
+              </a>
+            </th>
+          </tr>
+          <tr style="text-align: center;">
+            <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
+            <th style="width: 8%;">แปลค่า</th>
+            <th style="width: 8%;">RL</th>
+            <th style="width: 8%;">แปลค่า</th>
+            <th style="width: 8%;">(1+2)/2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>สสพ. สิงห์บุรี</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>สสพ.ตราด</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>สสพ.กาฬสินธุ์</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>2</td>
+            <td>กลาง</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>สสพ.ลำปาง</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>2</td>
+            <td>กลาง</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>สสพ.กาญจนบุรี</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>สสพ. ชัยนาท</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>สสพ. ปทุมธานี 1</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>สสพ. สระบุรี</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>สสพ. อ่างทอง</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>สสพ.ชลบุรี 1*</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>2</td>
+            <td>กลาง</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>11</td>
+            <td>สสพ. นนทบุรี</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>12</td>
+            <td>สสพ. ปทุมธานี 2</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>13</td>
+            <td>สสพ. ลพบุรี</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>14</td>
+            <td>สสพ. พระนครศรีอยุธยา 1</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>15</td>
+            <td>สสพ. พระนครศรีอยุธยา 2</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <br>
+    <div class="ui center aligned grid">
+      <div class="sixteen wide column">
+        <button class="ui mini button" routerLink="/int08-1">
+          <i class="arrow left icon"></i>
+          ย้อนกลับ
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="modalInt08333" class="ui modal hidden transition">
+  <i class="close icon"></i>
+  <div class="header">
+    กำหนดเงื่อนไข RL และแปลงค่า
+  </div>
+
+  <div class="content">
+    <div class="ui grid">
+      <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="ui form">
+      <div class="inline fields">
+        <div class="five wide field">
+          <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
+          <select id="select1" class="ui dropdown">
+            <option value="0">Between</option>
+            <option value="1">Less Than</option>
+            <option value="1">More Than</option>
+          </select>
+        </div>
+        <div class="three wide field">
+          <input type="text" value="0">
+        </div>
+        <div class="one wide field">
+          <label>ถึง</label>
+        </div>
+        <div class="two wide field">
+          <input type="text" value="1">
+        </div>
+        <div class="five wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="ต่ำ">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <div class="five wide field">
+          <label class="custom-label-w-10">เงื่อนไขที่ 2</label>
+          <select id="select2" class="ui dropdown">
+            <option value="0">Between</option>
+            <option value="1">Less Than</option>
+            <option value="1">More Than</option>
+          </select>
+        </div>
+        <div class="three wide field">
+          <input type="text" value="1.1">
+        </div>
+        <div class="one wide field">
+          <label>ถึง</label>
+        </div>
+        <div class="two wide field">
+          <input type="text" value="2">
+        </div>
+        <div class="five wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="กลาง">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <div class="five wide field">
+          <label class="custom-label-w-10">เงื่อนไขที่ 3</label>
+          <select id="select3" class="ui dropdown">
+            <option value="0">Between</option>
+            <option value="1">Less Than</option>
+            <option value="1">More Than</option>
+          </select>
+        </div>
+        <div class="three wide field">
+          <input type="text" value="2.1">
+        </div>
+        <div class="one wide field">
+          <label>ถึง</label>
+        </div>
+        <div class="two wide field">
+          <input type="text" value="3">
+        </div>
+        <div class="five wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="สูง">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="actions">
+    <div class="ui center aligned grid">
+      <div class="sixteen wide column">
+        <button class="ui mini primary button width-100">
+          <i class="save icon"></i>
+          บันทึก
+        </button>
+        <button class="ui mini button width-100" (click)="closePopupEdit()">
+          <i class="close icon"></i>
+          ปิด
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="modalInt08333-weight-data" class="ui small modal hidden transition">
+  <i class="close icon"></i>
+  <div class="header">
+    กำหนดค่าน้ำหนัก
+  </div>
+
+  <div class="content">
+    <div class="ui grid">
+      <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
+      </div>
+    </div>
+    <br>
+    <div class="ui form">
+      <div class="inline fields">
+        <div class="eight wide field">
+          <label class="custom-label-w-20">จำนวนค่าปรับ</label>
+          <input type="text" value="60%">
+        </div>
+        <div class="eight wide field">
+          <label class="custom-label-w-20">จำนวนคดี</label>
+          <input type="text" value="40%">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="actions">
+    <div class="ui center aligned grid">
+      <div class="sixteen wide column">
+        <button class="ui mini primary button width-100">
+          <i class="save icon"></i>
+          บันทึก
+        </button>
+        <button class="ui mini button width-100" (click)="clearPopupWeightData()">
+          <i class="close icon"></i>
+          ปิด
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
