rename file check-company-payment to int04-1

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -26,7 +26,7 @@
                 <div class="ui dropdown item">
                     <i class="dropdown icon"></i> ตรวจสอบสถิติการชำระภาษี
                     <div class="menu">
-                        <a class="item" [routerLink]="['/check-company-payment']" routerLinkActive="active">ตรวจสอบสถิติการชำระภาษี</a>
+                        <a class="item" [routerLink]="['/int04-1']" routerLinkActive="active">ตรวจสอบสถิติการชำระภาษี</a>
                         <a class="item" [routerLink]="['/check-company-renew']" routerLinkActive="active">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
                     </div>
                 </div>
