rename file check-company-renew to int04-2

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -27,7 +27,7 @@
                     <i class="dropdown icon"></i> ตรวจสอบสถิติการชำระภาษี
                     <div class="menu">
                         <a class="item" [routerLink]="['/int04-1']" routerLinkActive="active">ตรวจสอบสถิติการชำระภาษี</a>
-                        <a class="item" [routerLink]="['/check-company-renew']" routerLinkActive="active">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
+                        <a class="item" [routerLink]="['/int04-2']" routerLinkActive="active">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
                     </div>
                 </div>
                 <a class="item" [routerLink]="['/check-reprint-license']" routerLinkActive="active">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
