--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -30,7 +30,7 @@
                         <a class="item" [routerLink]="['/int04-2']" routerLinkActive="active">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
                     </div>
                 </div>
-                <a class="item" [routerLink]="['/check-reprint-license']" routerLinkActive="active">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
+                <a class="item" [routerLink]="['/int04-3']" routerLinkActive="active">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
                 <div class="ui simple dropdown item">
                     <i class="dropdown icon"></i> ตรวจสอบพัสดุ
                     <div class="menu">
