--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
@@ -53,9 +53,9 @@
           </div>
           <div class="five wide field">
             <ul style="margin-left: -6%;">
-                <li>159000.50</li>
-                <li>400764.00</li>
-                <li>100000.00</li>
+                <li>สาขาเมือง 1</li>
+                <li>สาขาเมือง 2</li>
+                <li>สาขาเมือง 3</li>
               </ul>
           </div>
         </div>
