--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -5,7 +5,7 @@
         </a>
         <a class="item" [routerLink]="['/home']" routerLinkActive="active" *ngIf="authService.getLogin()">Home</a>
         <div class="ui simple dropdown item" *ngIf="authService.getLogin()">
-            ตรวจสอบภายใน (รายได้)
+            ตรวจสอบภายใน
             <i class="dropdown icon"></i>
             <div class="menu">
                 <div class="ui dropdown item">
