--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
-                        <input type="text" class="custom-readonly" readonly="" value="">
+                        <input type="text" class="custom-readonly" readonly="" value="0000001">
                     </div>
                 </div>
 
