--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
@@ -509,7 +509,7 @@
         </table>
       </div>
     </div>
-    
+
   </div>
 </div>
 
@@ -520,16 +520,16 @@
   </div>
 
   <div class="content">
-    <div class="ui grid">
-      <div class="sixteen wide column">
-        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
-      </div>
-    </div>
-    <br><br>
     <div class="ui form">
+      <div class="inline fields">
+        <div class="sixteen wide field">
+          <button class="ui mini primary button">
+            <i class="add icon"></i>
+            เพิ่ม
+          </button>
+        </div>
+      </div>
+
       <div class="inline fields">
         <div class="five wide field">
           <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
