--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -209,16 +209,17 @@
   </div>
 
   <div class="content">
-    <div class="ui grid">
-      <div class="sixteen wide column">
-        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
-      </div>
-    </div>
-    <br><br>
+
     <div class="ui form">
+      <div class="inline fields">
+        <div class="sixteen wide field">
+          <button class="ui mini primary button">
+            <i class="add icon"></i>
+            เพิ่ม
+          </button>
+        </div>
+      </div>
+
       <div class="inline fields">
         <div class="five wide field">
           <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
