--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -240,16 +240,16 @@
   </div>
 
   <div class="content">
-    <div class="ui grid">
-      <div class="sixteen wide column">
-        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
-      </div>
-    </div>
-    <br><br>
     <div class="ui form">
+      <div class="inline fields">
+        <div class="sixteen wide field">
+          <button class="ui mini primary button">
+            <i class="add icon"></i>
+            เพิ่ม
+          </button>
+        </div>
+      </div>
+
       <div class="inline fields">
         <div class="five wide field">
           <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
@@ -324,7 +324,7 @@
 
     </div>
   </div>
-  
+
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
@@ -348,16 +348,16 @@
   </div>
 
   <div class="content">
-    <div class="ui grid">
-      <div class="sixteen wide column">
-        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
-      </div>
-    </div>
-    <br>
     <div class="ui form">
+      <div class="inline fields">
+        <div class="sixteen wide field">
+          <button class="ui mini primary button">
+            <i class="add icon"></i>
+            เพิ่ม
+          </button>
+        </div>
+      </div>
+
       <div class="inline fields">
         <div class="eight wide field">
           <label class="custom-label-w-20">ด้านงบประมาณ</label>
