--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -240,16 +240,16 @@
   </div>
 
   <div class="content">
-    <div class="ui grid">
-      <div class="sixteen wide column">
-        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
-      </div>
-    </div>
-    <br><br>
     <div class="ui form">
+      <div class="inline fields">
+        <div class="sixteen wide field">
+          <button class="ui mini primary button">
+            <i class="add icon"></i>
+            เพิ่ม
+          </button>
+        </div>
+      </div>
+
       <div class="inline fields">
         <div class="four wide field">
           <label style="width: 9em;">เงื่อนไขที่ 1</label>
