--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
@@ -91,7 +91,7 @@
                         <td>-</td>
                         <td>62,365.01</td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>รวม</td>
                         <td>33</td>
                         <td>107,744.24</td>
@@ -101,8 +101,21 @@
                         <td>808.12</td>
                         <td>12.75</td>
                         <td>106,923.37</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
+                <tfoot style="font-weight: bold">
+                    <tr>
+                        <td>รวม</td>
+                        <td class="right aligned">33</td>
+                        <td class="right aligned">107,744.24</td>
+                        <td class="right aligned">10,774.39</td>
+                        <td class="right aligned">10,235.59</td>
+                        <td class="right aligned">538.80</td>
+                        <td class="right aligned">808.12</td>
+                        <td class="right aligned">12.75</td>
+                        <td class="right aligned">106,923.37</td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
 
@@ -188,7 +201,7 @@
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>รวม</td>
                         <td>3</td>
                         <td>69.83</td>
@@ -197,8 +210,20 @@
                         <td>0.28</td>
                         <td>0</td>
                         <td>0</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
+                <tfoot style="font-weight: bold">
+                    <tr>
+                        <td>รวม</td>
+                        <td class="right aligned">3</td>
+                        <td class="right aligned">69.83</td>
+                        <td class="right aligned">0</td>
+                        <td class="right aligned">18.55</td>
+                        <td class="right aligned">0.28</td>
+                        <td class="right aligned">0</td>
+                        <td class="right aligned">0</td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
 
